tests/invalid/ListElemOf_Invalid_1.whiley
method g() -> void:
    [int] xs = [1, 2, 3]
    if 1.23 in xs:
        debug "GOT HERE"
